--- a/WelcomePage/templates/WelcomePage.html
+++ b/WelcomePage/templates/WelcomePage.html
@@ -56,7 +56,6 @@
     </div>
     <div class="leasderboard">
         <div class="section-title">Leaderboard</div>
-        <div class="description">Who is Nextcent suitable for?</div>
         <div class="leader-board">
             <div class="leader-board1">
                 <div class="frame">
@@ -142,7 +141,7 @@
                                 src="{% static 'public/ellipse-41@2x.png' %}"
                         />
 
-                        <b class="mahissh">Lara</b>
+                        <b class="mahissh">Tony</b>
                     </div>
                     <div class="group">
                         <b class="mahissh">3768</b>
@@ -168,7 +167,7 @@
                     />
 
                     <div class="matthew-parent">
-                        <b class="mahissh">Matthew</b>
+                        <b class="mahissh">Matthew Chung</b>
                         <div class="project-manager">Project Manager</div>
                     </div>
                 </div>
@@ -180,8 +179,8 @@
                     />
 
                     <div class="matthew-parent">
-                        <b class="mahissh">Danish</b>
-                        <div class="project-manager">Project Manager</div>
+                        <b class="mahissh">Danish Jayalath </b>
+                        <div class="project-manager">Back-End Developer</div>
                     </div>
                 </div>
             </div>
@@ -194,8 +193,8 @@
                     />
 
                     <div class="matthew-parent">
-                        <b class="mahissh">Mahissh</b>
-                        <div class="project-manager">Project Manager</div>
+                        <b class="mahissh">Mahissh Surendhar</b>
+                        <div class="project-manager">Front-End Developer</div>
                     </div>
                 </div>
                 <div class="member">
@@ -206,8 +205,8 @@
                     />
 
                     <div class="matthew-parent">
-                        <b class="mahissh">Azmina</b>
-                        <div class="project-manager">Project Manager</div>
+                        <b class="mahissh">Azmina Muhammad  </b>
+                        <div class="project-manager">UI/UX Designer</div>
                     </div>
                 </div>
             </div>
