--- a/QuizChallengeSystem/templates/challenge_list.html
+++ b/QuizChallengeSystem/templates/challenge_list.html
@@ -8,6 +8,7 @@
 {% block css %}
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/ConceptModule.css' %}"/>
+    <link rel="stylesheet" href="{% static 'css/nav-bar.css' %}"/>
     <style>
     body {
         background-color: var(--color-oldlace);
